--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
 							<div class="bk-front">
 								<div class="bk-cover">
 									
-										<img src="images/01-morpurgo.jpg" alt="">
+										<!-- <img src="images/01-morpurgo.jpg" alt=""> -->
 									
 								</div>
 								<div class="bk-cover-back"></div>
 							</div>
 							<div class="bk-page">
 								<div class="bk-content bk-content-current">
+									<a class="close" href="#">x</a>
+									<img src="images/01-innercover-morpurgo.jpg" alt="">
+								</div>
+								<div class="bk-content">
 									<a class="close" href="#">x</a>
 									<p>THE problem with being thought of as a bit of a daredevil was having to live up to my reputation. That, I discovered, can land you in all sorts of trouble.</p>
 									<a href="http://www.thesun.co.uk/sol/homepage/features/getkidsreading/5928331/Exclusive-Michael-Morpurgo-short-story-for-you-to-read-to-your-child-tonight.html">Read more</a>
@@ -58,12 +62,16 @@
 						<div class="bk-book book-2">
 							<div class="bk-front">
 								<div class="bk-cover">
-									<img src="images/02-walliams.jpg" alt="">
+									<!-- <img src="images/02-walliams.jpg" alt=""> -->
 								</div>
 								<div class="bk-cover-back"></div>
 							</div>
 							<div class="bk-page">
 								<div class="bk-content bk-content-current">
+									<a class="close" href="#">x</a>
+									<img src="images/02-innercover-walliams.jpg" alt="">
+								</div>
+								<div class="bk-content">
 									<a class="close" href="#">x</a>
 									<p><strong>Every morning before school, Alfie Griffith would get up super-early. But before he knew it, he’d be running late.</strong></p>
 
@@ -85,11 +93,17 @@
 					<li>
 						<div class="bk-book book-3">
 							<div class="bk-front">
-								<div class="bk-cover"><img src="images/03-landy.jpg" alt=""></div>
+								<div class="bk-cover">
+									<!-- <img src="images/03-landy.jpg" alt=""> -->
+								</div>
 								<div class="bk-cover-back"></div>
 							</div>
 							<div class="bk-page">
 								<div class="bk-content bk-content-current">
+									<a class="close" href="#">x</a>
+									<img src="images/03-innercover-landy.jpg" alt="">
+								</div>
+								<div class="bk-content">
 									<a class="close" href="#">x</a>
 									<p>PUNCHY-LAD’S first meeting with the SuperTeens did not go well. He’d had to iron his costume so he was late to the diner. The SuperTeens were already there. Transparo, the Invisible Boy, was the first to see him.</p>
 
@@ -103,7 +117,9 @@
 								<p></p>
 							</div>
 							<div class="bk-right"></div>
-							<div class="bk-left"><img src="images/03-spine-landy.png" alt=""></div>
+							<div class="bk-left">
+								 <img src="images/03-spine-landy.png" alt="">
+							</div>
 							<div class="bk-top"></div>
 							<div class="bk-bottom"></div>
 						</div>
@@ -112,11 +128,17 @@
 					<li>
 						<div class="bk-book book-4">
 							<div class="bk-front">
-								<div class="bk-cover"><img src="images/04-baddiel.jpg" alt=""></div>
+								<div class="bk-cover">
+									<!-- <img src="images/04-baddiel.jpg" alt=""> -->
+								</div>
 								<div class="bk-cover-back"></div>
 							</div>
 							<div class="bk-page">
 								<div class="bk-content bk-content-current">
+									<a class="close" href="#">x</a>
+									<img src="images/04-innercover-baddiel.jpg" alt="">
+								</div>
+								<div class="bk-content">
 									<a class="close" href="#">x</a>
 									<p>Barry looked at the man and woman in bright blue Lycra bodysuits who had appeared so quickly outside the Parent Agency. He didn’t know how it was possible for them to have got there so fast.</p>
 
@@ -139,11 +161,17 @@
 					<li>
 						<div class="bk-book book-5">
 							<div class="bk-front">
-								<div class="bk-cover"><img src="images/05-andre.jpg" alt=""></div>
+								<div class="bk-cover">
+									<!-- <img src="images/05-andre.jpg" alt=""> -->
+							</div>
 								<div class="bk-cover-back"></div>
 							</div>
 							<div class="bk-page">
 								<div class="bk-content bk-content-current">
+									<a class="close" href="#">x</a>
+									<img src="images/05-innercover-andre.jpg" alt="">
+								</div>
+								<div class="bk-content">
 									<a class="close" href="#">x</a>
 									<p>Trevor and George ran along the corridor, ‘We’re going to be late!’ Trevor puffed, trying to tuck in his shirt while simultaneously smoothing down his hair. ‘Well hopefully so will Professor McGrath.’ The boys came to a halt outside the science lab and scanned their thumbs to gain entry.</p>
 
@@ -166,11 +194,17 @@
 					<li>
 						<div class="bk-book book-6">
 							<div class="bk-front">
-								<div class="bk-cover"><img src="images/06-reid.jpg" alt=""></div>
+								<div class="bk-cover">
+									<!-- <img src="images/06-reid.jpg" alt=""> -->
+							</div>
 								<div class="bk-cover-back"></div>
 							</div>
 							<div class="bk-page">
 								<div class="bk-content bk-content-current">
+									<a class="close" href="#">x</a>
+									<img src="images/06-innercover-reid.jpg" alt="">
+								</div>
+								<div class="bk-content">
 									<a class="close" href="#">x</a>
 									<p>PUNCHY-LAD’S first meeting with the SuperTeens did not go well. He’d had to iron his costume so he was late to the diner. The SuperTeens were already there. Transparo, the Invisible Boy, was the first to see him.</p>
 
