--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<body>
 		<div class="supersplash">
 			<div class="main">
+				<div class="cta"><a href="http://www.thesun.co.uk/sol/homepage/features/getkidsreading/5927365/Get-kids-reading.html"><img src="images/cta.png" alt=""></a></div>
 				<ul id="bk-list" class="bk-list clearfix">
 
 					<li>
@@ -73,9 +74,7 @@
 								</div>
 								<div class="bk-content">
 									<a class="close" href="#">x</a>
-									<p><strong>Every morning before school, Alfie Griffith would get up super-early. But before he knew it, he’d be running late.</strong></p>
-
-									<p>“Now remember, Winnie, your social worker, will pick you up from the school gates at one-thirty today to take you to the dentist,” said Alfie’s dad as he was leaving.</p>
+									<p>Every morning before school, Alfie Griffith would get up super-early. But before he knew it, he’d be running late.“Now remember, Winnie, your social worker, will pick you up from the school gates at one-thirty today to take you to the dentist,” said Alfie’s dad as he was leaving.</p>
 
 									<a href="http://www.thesun.co.uk/sol/homepage/features/getkidsreading/5907159/Exclusive-David-Walliams-short-story-Read-A-Visit-to-the-Demon-Dentist-to-your-kids.html">Read more</a>
 								</div>
